<resources>
    <string name="app_name">Sunshine School System</string>
    <string name="nav_item1">Dashboard</string>
    <string name="nav_item2">Assignments</string>
    <string name="nav_item3">Fees</string>
    <string name="nav_item4">Grades</string>
    <string name="nav_item5">Attendance</string>
    <string name="nav_item6">Forms</string>
    <string name="nav_item7">Contact Us</string>
    <string name="nav_item8">Logout</string>
    <string name="getstartedbtn">Get Started</string>
    <string name="GetStartedText">The place for fulfilling your dreams!</string>
    <string name="EnterLogin">Please enter your email and password.</string>
    <string name="Login">Login</string>
    <string name="Logout">Logout</string>
    <string name="StudentName">StudentName</string>
    <string name="hintemai">Email</string>
    <string name="hintemap">Password</string>
    <string name="due">Due Date</string>
    <string name="status">Status</string>
    <string name="amount">Amount</string>
    <string name="Fine">Fine</string>
    <string name="Attended">Classes Attended</string>
    <string name="Missed">Classes Missed</string>
    <string name="Attendancebtn">Check Attendance</string>
    <string name="selectdate">Select Date to view Attendance</string>
    <string name="quiz">Quiz</string>
    <string name="Total">Total Marks:</string>
    <string name="Obtained">Obtained Marks:</string>
    <string name="Date">Date:</string>
    <string name="Upload">Upload PDF/Word File*</string>
    <string name="AssignmentSubject">Assignment Subject:</string>
    <string name="AssignmentDescription">Assignment Description:</string>
    <string name="AssignmentDue">Assignment DueDate:</string>


</resources>