<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Home">

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:fontFamily="sans-serif-black"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/tvDashboard"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="120dp"
        android:background="#0C000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/nav_item1"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvHomework"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#0C000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/nav_item2"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvFees"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#0C000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/nav_item3"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvGrades"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#0C000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/nav_item4"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvAttendance"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#0C000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/nav_item5"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvLogout"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="#19000000"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/Logout"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <ProgressBar
        android:id="@+id/progressBarHome"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp" />
</LinearLayout>