<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".MainActivity" >

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_margin="40dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:fontFamily="sans-serif-black"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="100dp"
        android:fontFamily="sans-serif-medium"
        android:gravity="center"
        android:text="@string/GetStartedText"
        android:textColor="#FFFFFF"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:orientation="vertical">

        <Button
            android:id="@+id/btnGetStarted"
            android:layout_width="298dp"
            android:layout_height="66dp"
            android:layout_gravity="center"
            android:layout_margin="50dp"
            android:background="@drawable/buttonbg"
            android:elevation="5dp"
            android:fontFamily="sans-serif-condensed-medium"
            android:hapticFeedbackEnabled="true"
            android:text="@string/getstartedbtn"
            android:textAllCaps="false"
            android:textColor="@color/black" />
    </LinearLayout>
</LinearLayout>