<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="235dp"
        android:layout_margin="8dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="12dp"
        app:cardElevation="10dp">

        <TextView
            android:id="@+id/textView20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/AssignmentSubject"
            android:textColor="#CB000000" />

        <TextView
            android:id="@+id/tvAssSubject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="145dp"
            android:layout_marginTop="8dp"
            android:textColor="#CB000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="40dp"
            android:text="@string/AssignmentDescription"
            android:textColor="#CB000000" />

        <TextView
            android:id="@+id/tvAssDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="40dp"
            android:textColor="#CB000000" />

        <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="100dp"
            android:text="@string/AssignmentDue"
            android:textColor="#CB000000" />

        <TextView
            android:id="@+id/tvAssDueDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="165dp"
            android:layout_marginTop="94dp"
            android:textColor="#CB000000"
            android:textSize="17sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/btnUploadAssignment"
            android:layout_width="58dp"
            android:layout_height="54dp"
            android:layout_gravity="center"
            android:layout_marginTop="60dp"
            app:srcCompat="@drawable/baseline_cloud_upload_24" />

        <TextView
            android:id="@+id/textView25"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="5dp"
            android:gravity="center"
            android:text="@string/Upload"
            android:textColor="#4CAF50"
            android:textStyle="bold" />

    </androidx.cardview.widget.CardView>
</LinearLayout>