<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Login">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="20dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center|top"
        android:layout_marginTop="70dp"
        android:layout_marginBottom="30dp"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:text="@string/EnterLogin"
        android:textColor="@color/white"
        android:textSize="18sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="#0DFFFFFF"
        app:boxBackgroundMode="filled"
        app:boxCornerRadiusBottomEnd="10dp"
        app:boxCornerRadiusBottomStart="10dp"
        app:boxCornerRadiusTopEnd="10dp"
        app:boxCornerRadiusTopStart="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#32FFFFFF"
            android:hint="@string/hintemai"
            android:inputType="textWebEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:boxBackgroundColor="#00000000"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#32FFFFFF"
            android:hint="@string/hintemap"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="59dp"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:background="@drawable/buttonbg"
        android:text="@string/Login"
        android:textColor="@color/white" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp" />
</LinearLayout>