<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:orientation="vertical"
    tools:context=".Attendance">

    <ImageView
        android:id="@+id/backbtn"
        android:layout_width="45dp"
        android:layout_height="32dp"
        android:layout_gravity="start"
        android:layout_margin="20dp"
        app:srcCompat="@drawable/baseline_arrow_back_24" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-black"
        android:text="@string/nav_item5"
        android:textColor="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="30dp"
        android:fontFamily="sans-serif-condensed"
        android:text="@string/selectdate"
        android:textColor="@color/white"
        android:textSize="22sp" />

    <CalendarView
        android:id="@+id/calendarView"
        style="@android:style/Widget.Material.CalendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:elevation="5dp"
        android:focusedByDefault="false"
        android:maxDate="12/31/2026"
        android:minDate="01/01/2023"
        android:selectedDateVerticalBar="@color/orange"
        android:unfocusedMonthDateColor="@color/white" />

    <Button
        android:id="@+id/btnCheckAttendance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@drawable/buttonbg"
        android:text="@string/Attendancebtn"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvAttendanceStatus"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="sans-serif-condensed"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <ProgressBar
        android:id="@+id/progressBarAttendance"
        style="?android:attr/progressBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp" />
</LinearLayout>